Css terminado al 3.9

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         </section>
 
         <footer class="footer">
-            <nav>
+            <nav class="nav_del_ul_footer">
                 <ul class="footer_nav">
                   <a href="index.html" class="footer_nav_item">
                     <li>Home</li>
